--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(252, 250, 246);
+  width: 100%;
 }
 
 code {
