--- a/src/index.css
+++ b/src/index.css
@@ -17,4 +17,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
+.sign{
+  border: 1px solid;
+}
+.typing{
+  border: none;
+}
+.typing:focus{
+  outline: none;
+}
